--- a/Part_1/BI306_Rtutorial_pt1.Rmd
+++ b/Part_1/BI306_Rtutorial_pt1.Rmd
@@ -2,11 +2,11 @@
 title: "BI 306 Lab"
 date: '*Fall 2021*'
 output:
-  html_document:
-    theme: cosmo
-    highlight: tango
   word_document:
     reference_docx: ../Misc_files/word_styles_ref.docx
+#  html_document:
+#    theme: cosmo
+#    highlight: tango
 ---
 
 ```{r, echo=FALSE}
@@ -26,11 +26,23 @@ url <- "https://memegenerator.net/img/instances/62624007.jpg"
 
 <br/>
 
-### **Before you begin, you will need to download the following:**
 
-* R software [here](https://archive.linux.duke.edu/cran/) for your computer   
+## **Goals for this tutorial**
+
+* Install R and R studio
+* View the structure of data sets
+* Perform basic summary statistics on data (```summarySE()``` and ```tidyverse```)
+* Make R markdown table to display data
+
+<br/>
+
+
+## **Before you begin, you will need to download the following:**
+
+* R software [here](https://archive.linux.duke.edu/cran/) for your computer
 * RStudio [here](https://www.rstudio.com/products/rstudio/download/#download)   
 
+<br/>
 
 ### Hints for starting with R coding
 
@@ -47,13 +59,6 @@ url <- "https://memegenerator.net/img/instances/62624007.jpg"
 
 
 <br/>
-
-## **Goals for this tutorial**
-
-* Install R and R studio
-* View the structure of data sets
-* Perform basic summary statistics on data (```summarySE()``` and ```tidyverse```)
-* Make R markdown table to display data
 
 
 ## **Getting started with R**
@@ -142,11 +147,13 @@ help(package = "Rmisc")
 
 <br/>
 
-## **Simply summary statistics**
+## **Simple summary statistics**
 
 Once you know what the structure ```str()``` of your data looks like, it is also good to look at some basic summary statistics. There are many different ways to calculate summary statistics in R, but here we will explore two different methods using different R packages.
 
-In this course, you will be expected to be able to calculate, interpret, and report the following summary statistics:
+<br/>
+
+In this course, you will be expected to be able to calculate, interpret, and report the following variables:
 
 * **Sample size** ($N$): number of observations/individuals included in a study
 * **Mean** ($\overline{X}$): the sum ($\Sigma_{x}$) of the values divided by the number of values ($N$)
@@ -213,12 +220,44 @@ sepal_length_sum
 
 <br/>
 
+Last thing we will do with the ```sepal_length_sum``` data frame will be to display it as a nice table in the R markdown output. This is a nice way to display your data once you have a summary of the data. To do this, we will use the ```knitr``` package with the function ```kable()```. This package (and function) can do a lot of really helpful things for R markdown output files, especially if you use them to create reports on data (you can review the [documentation of the package here](https://www.rdocumentation.org/packages/knitr/versions/1.30) or read [specifically about the kable function](https://www.rdocumentation.org/packages/knitr/versions/1.30/topics/kable)).
+
+We will need to install and load the ```knitr``` package to make nice tables in the R markdown output.
+```{r echo = TRUE, results = 'hide', eval = FALSE}
+
+## You do this one! How do you install the knitr package? Add the code below.
+# install package
+install.packages("knitr")
+
+```
+
+```{r echo=TRUE, message=FALSE, results=FALSE}
+
+## How do you load the knitr package? Add the code below.
+# load package
+library(knitr)
+
+```
+
+<br/>
+
+Once you have ```knitr``` loaded, making a basic table is very simple. The name of the data frame we want to display as a table just needs to be typed within the parentheses like so:
+
 ```{r}
 
-library(knitr)
 kable(sepal_length_sum)
 
 ```
+
+The default ```kable()``` table is pretty good, but you can also add helpful things like a table caption. Below we add a caption to the sample table created above, but you are encouraged to explore other ways to modify the table by reading the [function documentation](https://www.rdocumentation.org/packages/knitr/versions/1.30/topics/kable). To add the caption, we add the code ```caption = ""``` within the parentheses of the function and then type the desired table caption within the quotes (```" "```).
+
+```{r}
+
+kable(sepal_length_sum, caption = "Table 1 | Summary statistics of sepal length by species created using summarySE()")
+
+```
+
+<br/>
 
 
 ### **Method 2**: Tidyverse
@@ -297,17 +336,31 @@ This looks great! The last thing to do now is assign this ```tibble``` to a name
 
 ```
 
+Go ahead and also display the ```sepal_length_sum_tidy``` data as a table (using ```kable()``` like above) with a descriptive caption:
+
+```{r}
+
+## Use the kable() function to make a table of your ```sepal_length_sum_tidy``` data that will
+## display the data nicely in the R markdown output
+
+
+```
+
 <br/>
 
----
 
 ## <span style="color:red">**First R Assignment:**</span>
 
-Your first lab assignment is to get you a bit more familiar with R. **This will be due by the the start of next lab**. This assignment can be completed with other members from your lab section but if you work with others, please include their names on your submission.
+Your first lab assignment is to get you a bit more familiar with R. **This will be due by the the start of next lab**. You will submit both your R markdown code and the Word output of your work. This assignment can be completed with other members from your lab section but if you work with others, please include their names on your submission.   
+
+1. **Create a R markdown document that will knit as a Word document.** You will submit both the R markdown code and the Word document for this assignment so this will be assessed as a part of your submission. 
+2. **Calculate summary statistics.** Using the *iris* data, calculate the *mean*, *sample size*, *standard error*, and *standard deviation* of the **Petal.Width** per species of flower. Do this using both methods we discussed in lab:   
+    A.  Using *summarySE()*
+    B.  Using *tidyverse*
+3. **Display summary data as R markdown table** Choose one of the summary data frames you create above (either using *summarySE()* or *tidyverse*) and have it display as a table in your R markdown output.
 
 <br/>
 
----
 
 ## **Helpful resources**
 
@@ -328,6 +381,5 @@ url2 <- "https://i.redd.it/hbgrpj5qg5zz.jpg"
 
 ## **Still stuck? Reach out to your TA/TF or attend an R help session held throughout the semester!**
 
-<br/>
 
 
